# AI_assisted_DevOps

./: README.md
CrewAI/devops_ai_workspace/: README.md  pyproject.toml  report.md
CrewAI/devops_ai_workspace/src/devops_ai_workspace/: crew.py  main.py
GenAI_Project/: README.md
GenAI_Project/Dockerfile_Generator/: README.md  generate_dockerfile.py
GenAI_Project/K8s_Manifests_Generator/: README.md
GenAI_Project/Python_Scripts/: README.md  calculator.py  find_old_files.py  server_health_check.py
GenAI_Project/Shell_Scripts/: README.md  aws_ec2_create.sh  deployment_script.sh  find_old_files.sh  server_health_check.sh
GenAI_Project/local-llms-ollama-setup/: README.md
Linux/: README.md  file_comparison.sh
Python/: file_comparison.py
