[project]
name = "devops_ai_workspace"
version = "0.1.0"
description = "devops-ai-workspace using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
devops_ai_workspace = "devops_ai_workspace.main:run"
run_crew = "devops_ai_workspace.main:run"
train = "devops_ai_workspace.main:train"
replay = "devops_ai_workspace.main:replay"
test = "devops_ai_workspace.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
